--- a/common/package.json
+++ b/common/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && tsc --build"
   },
   "dependencies": {
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.5.2"
   }
 }
