--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.2",
-    "@retrospected/common": "*",
+    "@retrospected/common": "file:.yalc/@retrospected/common",
     "@sentry/browser": "^6.13.3",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.20.2",
