--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.2",
-    "@retrospected/common": "file:.yalc/@retrospected/common",
+    "@retrospected/common": "*",
     "@sentry/browser": "^6.13.3",
     "@stripe/react-stripe-js": "^1.6.0",
     "@stripe/stripe-js": "^1.20.2",
