--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,32 +4,32 @@
 FROM node:16-alpine
 
 # App directory
-WORKDIR /usr/src/backend
+WORKDIR /usr/src
 
 ENV NODE_ENV production
 
 RUN npm i -g yalc
 
-COPY ./yarn.lock ./
-COPY ./package.json ./
+COPY ./package.json ./package.json
 COPY ./backend/package.json ./backend/
 COPY ./backend/yarn.lock ./backend/
 COPY ./backend/tsconfig.json ./backend/
-COPY ./common ./common
+COPY ./common/package.json ./common/
+COPY ./common/yarn.lock ./common/
+COPY ./common/tsconfig.json ./common/
+COPY ./common/src ./common/src
 
-WORKDIR /usr/src/backend/common
+WORKDIR /usr/src/common
 RUN yarn --network-timeout 1000000 install
 RUN yarn build
 RUN yalc publish --private
-WORKDIR /usr/src/backend/backend
-RUN yalc add @retrospected/common
 
-RUN yarn --network-timeout 1000000 install
 WORKDIR /usr/src/backend
+RUN yalc add @retrospected/common
 RUN yarn --network-timeout 1000000 install
 
-COPY ./backend ./backend
-
+WORKDIR /usr/src
+COPY ./backend/src ./backend/src
 RUN yarn build-backend
 
 EXPOSE ${BACKEND_PORT}
