--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist && tsc --build",
-    "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
+    "start": "NODE_PATH=src/ nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
     "create-migration": "ts-node ./src/init.ts --ts && ts-node ../node_modules/typeorm/cli.js migration:generate -n ",
     "migrate": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:run",
     "revert": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:revert",
