--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
@@ -65,7 +66,7 @@
     "shortid": "^2.2.16",
     "socket.io-client": "4.3.2",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.4.4",
+    "typescript": "4.4.4",
     "uuid": "^8.3.2",
     "whatwg-fetch": "^3.6.2"
   },
