--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -27,7 +27,7 @@ RUN yarn build
 
 FROM nginx:alpine
 
-COPY --from=Node /home/node/app/frontend/build /usr/share/nginx/html
+COPY --from=Node /home/node/app/build /usr/share/nginx/html
 COPY ./docker/nginx.conf.template /etc/nginx/conf.d/default.conf.template
 COPY ./docker/frontend-entrypoint.sh /
 
