--- a/backend/package.json
+++ b/backend/package.json
@@ -88,7 +88,7 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
     "typeorm": "^0.2.38",
-    "typescript": "^4.4.4",
+    "typescript": "4.4.4",
     "uuid": "^8.3.2",
     "yargs": "^17.2.1"
   },
