--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "An agile retrospective board - Powering www.retrospected.com",
   "private": true,
   "scripts": {
-    "test": "yarn build-common && cd frontend && yarn test",
+    "test": "cd frontend && yarn test",
     "ci-test": "CI=true yarn test",
     "lint": "cd frontend && yarn lint && cd ../backend && yarn lint",
     "clean": "del ./{frontend,backend,common,maintenance}/yarn.lock && del ./yarn.lock && del ./{frontend,backend,common,maintenance}/node_modules && del ./node_modules",
-    "clean-install": "del ./{frontend,backend,common,maintenance}/node_modules && del ./node_modules && yarn",
+    "clean-install": "del ./{frontend,backend,maintenance}/node_modules && del ./node_modules && yarn",
     "frontend": "cd frontend && yarn start && cd ..",
-    "backend": "yarn build-common && cd backend && yarn start && cd ..",
+    "backend": "cd backend && yarn start && cd ..",
     "backend-production": "yarn migrate && cd ./backend/dist/src && node index.js",
-    "build-common": "cd common && yarn build && cd ..",
-    "build-frontend": "yarn build-common && cd frontend && yarn build && cd ..",
+    "build-frontend": "cd frontend && yarn build && cd ..",
     "build-backend": "cd backend && yarn build && cd ..",
     "build": "yarn build-frontend && yarn build-backend",
-    "start": "yarn build-common && yarn backend & yarn frontend",
+    "start": "yarn backend & yarn frontend",
     "migrate": "cd backend && yarn migrate && cd ..",
     "stripe-login": "stripe login",
     "stripe-listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
