--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf dist && tsc --build",
     "start": "NODE_PATH=src/ nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
-    "create-migration": "ts-node ./src/init.ts --ts && ts-node ../node_modules/typeorm/cli.js migration:generate -n ",
-    "migrate": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:run",
-    "revert": "node ./dist/src/init.js && node ../node_modules/typeorm/cli.js migration:revert",
+    "create-migration": "NODE_PATH=src/ ts-node ./src/init.ts --ts && NODE_PATH=src/ ts-node ./node_modules/typeorm/cli.js migration:generate -n ",
+    "migrate": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:run",
+    "revert": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint 'src/**/*.ts'",
     "fix": "eslint 'src/**/*.ts' --fix"
   },
