--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rimraf dist && tsc --build",
     "start": "NODE_PATH=src/ nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
+    "backend-production": "yarn migrate && cd ./dist/src && node index.js",
     "create-migration": "NODE_PATH=src/ ts-node ./src/init.ts --ts && NODE_PATH=src/ ts-node ./node_modules/typeorm/cli.js migration:generate -n ",
     "migrate": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:run",
     "revert": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:revert",
