--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,71 +4,71 @@
   "license": "GNU GPLv3",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/core": "^5.0.0-alpha.54",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.4",
-    "@mui/styles": "^5.0.1",
-    "@mui/x-data-grid": "^5.0.0-beta.2",
-    "@sentry/browser": "^6.13.3",
-    "@stripe/react-stripe-js": "^1.6.0",
-    "@stripe/stripe-js": "^1.20.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@types/crypto-js": "^4.0.2",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
-    "@types/md5": "^2.3.1",
-    "@types/node": "^16.11.0",
-    "@types/react": "^17.0.30",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-color": "^3.0.5",
-    "@types/react-copy-to-clipboard": "^5.0.2",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.4",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/shortid": "^0.0.29",
-    "@types/socket.io-client": "^1.4.36",
-    "@types/uuid": "^8.3.1",
-    "bowser": "^2.11.0",
-    "core-js": "^3.18.3",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.25.0",
-    "flag-icon-css": "^3.5.0",
-    "http-proxy-middleware": "^2.0.1",
-    "isemail": "^3.2.0",
-    "lexorank": "^1.0.4",
-    "lodash": "^4.17.21",
-    "material-ui-confirm": "^3.0.2",
-    "md5": "^2.3.0",
-    "notistack": "^2.0.2",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-autosize-textarea": "^7.1.0",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-color": "^2.19.3",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-giphy-searchbox": "^1.5.4",
-    "react-helmet": "^6.1.0",
-    "react-markdown": "^6.0.3",
-    "react-password-strength-bar": "^0.4.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "react-social-login-buttons": "^3.6.0",
-    "recoil": "^0.4.1",
-    "rehype-raw": "^6.1.0",
-    "shortid": "^2.2.16",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
+    "@mui/core": "5.0.0-alpha.54",
+    "@mui/icons-material": "5.0.4",
+    "@mui/lab": "5.0.0-alpha.51",
+    "@mui/material": "5.0.4",
+    "@mui/styles": "5.0.1",
+    "@mui/x-data-grid": "5.0.0-beta.2",
+    "@sentry/browser": "6.13.3",
+    "@stripe/react-stripe-js": "1.6.0",
+    "@stripe/stripe-js": "1.20.2",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/crypto-js": "4.0.2",
+    "@types/jest": "27.0.2",
+    "@types/lodash": "4.14.175",
+    "@types/md5": "2.3.1",
+    "@types/node": "16.11.0",
+    "@types/react": "17.0.30",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-color": "3.0.5",
+    "@types/react-copy-to-clipboard": "5.0.2",
+    "@types/react-dom": "17.0.9",
+    "@types/react-helmet": "6.1.4",
+    "@types/react-router-dom": "5.3.1",
+    "@types/shortid": "0.0.29",
+    "@types/socket.io-client": "1.4.36",
+    "@types/uuid": "8.3.1",
+    "bowser": "2.11.0",
+    "core-js": "3.18.3",
+    "crypto-js": "4.1.1",
+    "date-fns": "2.25.0",
+    "flag-icon-css": "3.5.0",
+    "http-proxy-middleware": "2.0.1",
+    "isemail": "3.2.0",
+    "lexorank": "1.0.4",
+    "lodash": "4.17.21",
+    "material-ui-confirm": "3.0.2",
+    "md5": "2.3.0",
+    "notistack": "2.0.2",
+    "prop-types": "15.7.2",
+    "query-string": "7.0.1",
+    "react": "17.0.2",
+    "react-autosize-textarea": "7.1.0",
+    "react-beautiful-dnd": "13.1.0",
+    "react-color": "2.19.3",
+    "react-copy-to-clipboard": "5.0.4",
+    "react-dom": "17.0.2",
+    "react-ga": "3.3.0",
+    "react-giphy-searchbox": "1.5.4",
+    "react-helmet": "6.1.0",
+    "react-markdown": "6.0.3",
+    "react-password-strength-bar": "0.4.0",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3",
+    "react-social-login-buttons": "3.6.0",
+    "recoil": "0.4.1",
+    "rehype-raw": "6.1.0",
+    "shortid": "2.2.16",
     "socket.io-client": "4.3.2",
-    "source-map-explorer": "^2.5.2",
+    "source-map-explorer": "2.5.2",
     "typescript": "4.4.4",
-    "uuid": "^8.3.2",
-    "whatwg-fetch": "^3.6.2"
+    "uuid": "8.3.2",
+    "whatwg-fetch": "3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
