--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "homepage": "http://www.retrospected.com",
   "dependencies": {
-    "del-cli": "^4.0.1",
-    "typescript": "^4.4.4"
+    "del-cli": "4.0.1",
+    "typescript": "4.4.4"
   }
 }
