--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "@types/react-helmet": "6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/shortid": "0.0.29",
-    "@types/socket.io-client": "1.4.36",
+    "@types/socket.io-client": "3.0.0",
     "@types/uuid": "8.3.4",
     "bowser": "2.11.0",
     "core-js": "3.20.3",
@@ -59,7 +59,7 @@
     "react-markdown": "6.0.3",
     "react-password-strength-bar": "0.4.0",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-social-login-buttons": "3.6.0",
     "recoil": "0.5.2",
     "rehype-raw": "6.1.1",
@@ -67,6 +67,7 @@
     "socket.io-client": "4.4.1",
     "source-map-explorer": "2.5.2",
     "typescript": "4.5.4",
+    "util": "^0.12.4",
     "uuid": "8.3.2",
     "whatwg-fetch": "3.6.2"
   },
