Soft link directory

--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -2,7 +2,7 @@ name: 'Alpha Build'
 
 on:
   push:
-    branches: [hotfix/vulnerabilities]
+    branches: [hotfix/vulnerabilities-3]
 
 jobs:
   build:
