--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "migrate": "cd backend && yarn migrate && cd ..",
     "stripe-login": "stripe login",
     "stripe-listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook",
-    "bump": ". ./scripts/bump.sh",
-    "initialise": "ln -s $PWD/frontend/src/common/ $PWD/backend/src/common"
+    "bump": ". ./scripts/bump.sh"
   },
   "repository": {
     "type": "git",
