--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "react-password-strength-bar": "0.4.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-social-login-buttons": "3.6.0",
     "recoil": "0.5.2",
     "rehype-raw": "6.1.1",
