--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
   "bugs": {
     "url": "https://github.com/antoinejaussoin/retro-board/issues"
   },
-  "homepage": "http://www.retrospected.com",
+  "homepage": "https://www.retrospected.com",
   "dependencies": {
-    "del-cli": "4.0.1",
-    "typescript": "4.4.4"
+    "del-cli": "4.0.1"
   }
 }
