--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
     "build": "rimraf dist && tsc --build",
     "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
     "backend-production": "yarn migrate && cd ./dist/src && node index.js",
-    "create-migration": "ts-node ./src/init.ts --ts && ts-node ./node_modules/typeorm/cli.js migration:generate -n ",
-    "migrate": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:run",
+    "create-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n ",
+    "migrate": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:run",
+    "mig": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n Test",
     "revert": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "eslint 'src/**/*.ts'",
     "test": "yarn jest",
@@ -87,6 +88,7 @@
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
     "typeorm": "0.2.41",
+    "typeorm-naming-strategies": "^2.0.0",
     "typescript": "4.5.4",
     "uuid": "8.3.2",
     "yargs": "17.3.1"
