--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "create-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n ",
     "migrate": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:run",
     "mig": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n Test",
-    "revert": "node ./dist/src/init.js && node ./node_modules/typeorm/cli.js migration:revert",
+    "revert": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:revert",
     "lint": "eslint 'src/**/*.ts'",
     "test": "yarn jest",
     "ci-test": "CI=true yarn test",
