--- a/integration/docker-compose.ci.yml
+++ b/integration/docker-compose.ci.yml
@@ -2,11 +2,11 @@ version: '3'
 services:
   cypress:
     image: "cypress/included:4.4.0"
-    # entrypoint: cypress open --project /e2e
+    ipc: host
     depends_on:
       - frontend
     environment:
-      - CYPRESS_baseUrl=http://frontend:1800
+      - CYPRESS_baseUrl=http://frontend
     working_dir: /e2e
     volumes:
       - ./:/e2e
@@ -15,12 +15,7 @@ services:
     image: postgres:11.6
     hostname: postgres
     environment:
-      # Only change the Database password below BEFORE running for the first time. Once the database
-      # is initialised, you can't change the password anymore.
-      # This password has to be the same as the DB_PASSWORD in the "backend" section below.
       POSTGRES_PASSWORD: some-password
-
-      # -- Dot not modify --
       POSTGRES_USER: postgres
       POSTGRES_DB: retroboard
     volumes:
@@ -36,10 +31,9 @@ services:
     depends_on:
       - redis
     environment:
-      LICENCE_KEY:  # Your personal licence key
-      SELF_HOSTED_ADMIN: 'your@email.com' # This is the user who is going to be admin on the self-hosted Retrospected instance.
-      DB_PASSWORD: some-password # Must be the same as POSTGRES_PASSWORD above
-      SESSION_SECRET: im-a-secret # This can be anything. You don't have to change this.
+      SELF_HOSTED_ADMIN: 'your@email.com'
+      DB_PASSWORD: some-password
+      SESSION_SECRET: im-a-secret
 
     restart: unless-stopped
     logging:
@@ -51,8 +45,6 @@ services:
     image: retrospected/frontend:latest
     depends_on:
       - backend
-    ports:
-      - '1800:80' # Change 1800 to whatever port you want to access Retrospected from
     restart: unless-stopped
     logging:
       driver: 'json-file'
