Integration on all branches

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,7 @@ name: 'Integration Tests'
 
 on:
   push:
-    branches: [v4120/integration]
+    branches: [v4120/integrationxxxx]
 
 jobs:
   build:
