--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,7 @@
     "react-markdown": "6.0.3",
     "react-password-strength-bar": "0.4.0",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "4.2.0",
     "react-social-login-buttons": "3.6.0",
     "recoil": "0.6.1",
@@ -67,6 +67,7 @@
     "socket.io-client": "4.4.1",
     "source-map-explorer": "2.5.2",
     "typescript": "4.6.2",
+    "util": "^0.12.4",
     "uuid": "8.3.2",
     "whatwg-fetch": "3.6.2"
   },
