--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "core-js": "3.21.1",
     "crypto-js": "4.1.1",
     "date-fns": "2.28.0",
-    "flag-icon-css": "3.5.0",
+    "flag-icons": "6.1.1",
     "http-proxy-middleware": "2.0.3",
     "isemail": "3.2.0",
     "lexorank": "1.0.4",
