--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/react": "11.8.1",
     "@emotion/styled": "11.8.1",
-    "@mui/core": "5.0.0-alpha.54",
+    "@mui/base": "5.0.0-alpha.70",
     "@mui/icons-material": "5.4.4",
     "@mui/material": "5.4.4",
     "@mui/styles": "5.4.4",
@@ -30,7 +30,6 @@
     "@types/react-helmet": "6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/shortid": "0.0.29",
-    "@types/socket.io-client": "3.0.0",
     "@types/uuid": "8.3.4",
     "bowser": "2.11.0",
     "core-js": "3.21.1",
@@ -67,7 +66,7 @@
     "socket.io-client": "4.4.1",
     "source-map-explorer": "2.5.2",
     "typescript": "4.6.2",
-    "util": "^0.12.4",
+    "util": "0.12.4",
     "uuid": "8.3.2",
     "whatwg-fetch": "3.6.2"
   },
