--- a/docs/package.json
+++ b/docs/package.json
@@ -35,6 +35,7 @@
     "react-dom": "17.0.2",
     "react-syntax-highlighter": "15.4.5",
     "react-toggle": "4.1.2",
+    "trim": "0.0.3",
     "url-loader": "4.1.1"
   },
   "devDependencies": {
@@ -46,7 +47,7 @@
     "typescript": "4.6.2"
   },
   "resolutions": {
-    "node-fetch": "2.6.7",
+    "@docusaurus/preset-classic/**/node-fetch": "2.6.7",
     "prismjs": "1.27.0"
   },
   "browserslist": {
