--- a/docs/package.json
+++ b/docs/package.json
@@ -48,7 +48,8 @@
   },
   "resolutions": {
     "@docusaurus/preset-classic/**/node-fetch": "2.6.7",
-    "prismjs": "1.27.0"
+    "prismjs": "1.27.0",
+    "trim": "0.0.3"
   },
   "browserslist": {
     "production": [
