ALlow Disable password registration

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ SENTRY_URL=
 SESSION_SECRET=changeme
 DISABLE_ANONYMOUS_LOGIN=false
 DISABLE_PASSWORD_LOGIN=false
+DISABLE_PASSWORD_REGISTRATION=false
 TWITTER_KEY=
 TWITTER_SECRET=
 GOOGLE_KEY=
