--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "license": "GNU GPLv3",
   "private": true,
   "scripts": {
-    "build": "rimraf dist && tsc --build",
+    "build": "rimraf dist && tsc --build && yarn copy-templates",
     "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
     "create-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n ",
     "create-empty-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:create -n ",
@@ -15,7 +15,8 @@
     "ci-test": "CI=true yarn test",
     "fix": "eslint 'src/**/*.ts' --fix",
     "backend-production": "yarn migrate-production && cd ./dist/src && node index.js",
-    "migrate-production": "node ./node_modules/typeorm/cli.js --config dist/src/db/orm-config.js migration:run"
+    "migrate-production": "node ./node_modules/typeorm/cli.js --config dist/src/db/orm-config.js migration:run",
+    "copy-templates": "copyfiles -u 0 src/**/*.html dist/"
   },
   "dependencies": {
     "@sendgrid/mail": "7.6.2",
@@ -47,6 +48,7 @@
     "bcryptjs": "2.4.3",
     "chalk": "4.1.2",
     "connect-redis": "6.1.3",
+    "copyfiles": "^2.4.1",
     "crypto-js": "4.1.1",
     "csurf": "1.11.0",
     "date-fns": "2.28.0",
