--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "@types/lodash": "4.14.181",
     "@types/node": "17.0.23",
     "@types/node-fetch": "2.5.12",
-    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer": "6.4.4",
     "@types/passport": "1.0.7",
     "@types/passport-github2": "1.2.5",
     "@types/passport-google-oauth20": "2.0.11",
@@ -48,7 +48,7 @@
     "bcryptjs": "2.4.3",
     "chalk": "4.1.2",
     "connect-redis": "6.1.3",
-    "copyfiles": "^2.4.1",
+    "copyfiles": "2.4.1",
     "crypto-js": "4.1.1",
     "csurf": "1.11.0",
     "date-fns": "2.28.0",
@@ -61,13 +61,13 @@
     "express-rate-limit": "6.3.0",
     "express-session": "1.17.2",
     "freemail": "1.7.0",
-    "handlebars": "^4.7.7",
+    "handlebars": "4.7.7",
     "jest": "27.5.1",
     "lexorank": "1.0.4",
     "lodash": "4.17.21",
     "moment": "2.29.1",
     "node-fetch": "2.6.7",
-    "nodemailer": "^6.7.3",
+    "nodemailer": "6.7.3",
     "nodemon": "2.0.15",
     "passport": "0.5.0",
     "passport-github2": "0.1.12",
@@ -89,7 +89,7 @@
     "ts-jest": "27.1.4",
     "ts-node": "10.7.0",
     "typeorm": "0.2.45",
-    "typeorm-naming-strategies": "^3.0.0",
+    "typeorm-naming-strategies": "3.0.0",
     "typescript": "4.6.3",
     "uuid": "8.3.2"
   },
