--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "4.15.0",
   "license": "GNU GPLv3",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc --build && yarn copy-templates",
-    "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
+    "start": "nodemon --exec 'yarn fix & node --experimental-specifier-resolution=node --loader ts-node/esm' ./src/index.ts",
     "create-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:generate -n ",
     "create-empty-migration": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:create -n ",
     "migrate": "ts-node ./node_modules/typeorm/cli.js --config src/db/orm-config.ts migration:run",
@@ -26,7 +27,7 @@
     "@types/crypto-js": "4.1.1",
     "@types/express": "4.17.13",
     "@types/express-mung": "0.5.2",
-    "@types/express-rate-limit": "6.0.0",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/express-session": "1.17.4",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.181",
@@ -88,7 +89,7 @@
     "ts-node": "10.7.0",
     "typeorm": "0.2.45",
     "typeorm-naming-strategies": "3.0.0",
-    "typescript": "4.6.3",
+    "typescript": "^4.7.0-dev.20220423",
     "uuid": "8.3.2"
   },
   "resolutions": {
