--- a/backend/package.json
+++ b/backend/package.json
@@ -46,7 +46,7 @@
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "bcryptjs": "2.4.3",
-    "chalk": "^5.0.1",
+    "chalk": "4.1.2",
     "connect-redis": "6.1.3",
     "copyfiles": "2.4.1",
     "crypto-js": "4.1.1",
@@ -87,7 +87,7 @@
     "stripe": "8.216.0",
     "ts-jest": "27.1.4",
     "ts-node": "10.7.0",
-    "typeorm": "^0.3.6",
+    "typeorm": "0.2.45",
     "typeorm-naming-strategies": "3.0.0",
     "typescript": "^4.7.0-dev.20220423",
     "uuid": "8.3.2"
