--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   },
   "homepage": "https://www.retrospected.com",
   "dependencies": {
-    "del-cli": "4.0.1",
-    "typescript": "^4.7.0-dev.20220423"
+    "del-cli": "4.0.1"
   }
 }
