--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "ci-test": "CI=true yarn test",
     "fix": "eslint 'src/**/*.ts' --fix",
     "backend-production": "yarn migrate-production && cd ./dist/src && node index.js",
-    "migrate-production": "typeorm -d dist/src/db/orm-config.js migration:run",
+    "migrate-production": "typeorm -d dist/src/db/index.js migration:run",
     "copy-templates": "copyfiles -u 0 src/**/*.html dist/",
     "mig": "typeorm-ts-node-commonjs -d src/db/index.ts migration:run"
   },
