--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
     "fix": "eslint 'src/**/*.ts' --fix",
     "backend-production": "yarn migrate-production && cd ./dist/src && node index.js",
     "migrate-production": "typeorm -d dist/src/db/index.js migration:run",
-    "copy-templates": "copyfiles -u 0 src/**/*.html dist/",
-    "mig": "typeorm-ts-node-commonjs -d src/db/index.ts migration:run"
+    "copy-templates": "copyfiles -u 0 src/**/*.html dist/"
   },
   "dependencies": {
     "@passport-js/passport-twitter": "1.0.7",
