--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "4.18.0",
   "license": "GNU GPLv3",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc --build && yarn copy-templates",
-    "start": "nodemon --exec 'yarn fix & ts-node' --files ./src/index.ts",
+    "start": "nodemon --exec 'yarn fix & ts-node' --esm --files ./src/index.ts",
     "create-migration": "scripty",
     "create-empty-migration": "scripty",
     "migrate": "typeorm-ts-node-commonjs -d src/db/index.ts migration:run",
@@ -24,13 +25,14 @@
     "@sentry/node": "7.28.1",
     "@types/bcryptjs": "2.4.2",
     "@types/connect-redis": "0.0.19",
-    "@types/crypto-js": "4.1.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "4.17.14",
     "@types/express-mung": "0.5.2",
     "@types/express-rate-limit": "6.0.0",
     "@types/express-session": "1.17.4",
     "@types/jest": "29.2.4",
     "@types/lodash": "4.14.191",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.9",
     "@types/node-fetch": "2.6.2",
     "@types/nodemailer": "6.4.7",
@@ -46,7 +48,7 @@
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.47.1",
     "bcryptjs": "2.4.3",
-    "chalk": "4.1.2",
+    "chalk": "5.2.0",
     "connect-redis": "6.1.3",
     "copyfiles": "2.4.1",
     "crypto-js": "4.1.1",
@@ -64,8 +66,9 @@
     "jest": "29.3.1",
     "lexorank": "1.0.5",
     "lodash": "4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "2.29.4",
-    "node-fetch": "2.6.7",
+    "node-fetch": "3.3.0",
     "nodemailer": "6.8.0",
     "nodemon": "2.0.20",
     "passport": "0.5.0",
