--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "5.47.1",
     "bcryptjs": "2.4.3",
     "chalk": "5.2.0",
+    "chalk-template": "^0.5.0",
     "connect-redis": "6.1.3",
     "copyfiles": "2.4.1",
     "crypto-js": "4.1.1",
