--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -5,89 +5,89 @@ on:
     branches: [v4200/build-system]
 
 jobs:
-  # frontend:
-  #   runs-on: ubuntu-latest
+  frontend:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Read VERSION
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@master
+      - name: Read VERSION
+        id: package
+        uses: martinbeentjes/npm-get-version-action@master
 
-  #     - name: Echo VERSION
-  #       run: echo ${{ steps.package.outputs.current-version }}
+      - name: Echo VERSION
+        run: echo ${{ steps.package.outputs.current-version }}
 
-  #     - name: Setup QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #       with:
-  #         platforms: all
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: all
 
-  #     - name: Setup BuildX
-  #       uses: docker/setup-buildx-action@v2
-  #       id: buildx
-  #       with:
-  #         install: true
+      - name: Setup BuildX
+        uses: docker/setup-buildx-action@v2
+        id: buildx
+        with:
+          install: true
 
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_NEW_USERNAME }}
-  #         password: ${{ secrets.DOCKER_NEW_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_NEW_USERNAME }}
+          password: ${{ secrets.DOCKER_NEW_PASSWORD }}
 
-  #     - name: Build and push Frontend
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         builder: ${{ steps.buildx.outputs.name }}
-  #         file: frontend/Dockerfile
-  #         context: frontend
-  #         tags: retrospected/frontend:alpha
-  #         platforms: linux/amd64
-  #         push: true
+      - name: Build and push Frontend
+        uses: docker/build-push-action@v4
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          file: frontend/Dockerfile
+          context: frontend
+          tags: retrospected/frontend:alpha
+          platforms: linux/amd64
+          push: true
 
-  # backend:
-  #   runs-on: ubuntu-latest
+  backend:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Read VERSION
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@master
+      - name: Read VERSION
+        id: package
+        uses: martinbeentjes/npm-get-version-action@master
 
-  #     - name: Echo VERSION
-  #       run: echo ${{ steps.package.outputs.current-version }}
+      - name: Echo VERSION
+        run: echo ${{ steps.package.outputs.current-version }}
 
-  #     - name: Setup QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #       with:
-  #         platforms: all
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: all
 
-  #     - name: Setup BuildX
-  #       uses: docker/setup-buildx-action@v2
-  #       id: buildx
-  #       with:
-  #         install: true
+      - name: Setup BuildX
+        uses: docker/setup-buildx-action@v2
+        id: buildx
+        with:
+          install: true
 
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_NEW_USERNAME }}
-  #         password: ${{ secrets.DOCKER_NEW_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_NEW_USERNAME }}
+          password: ${{ secrets.DOCKER_NEW_PASSWORD }}
 
-  #     - name: Build and push Backend
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         builder: ${{ steps.buildx.outputs.name }}
-  #         file: backend/Dockerfile
-  #         context: backend
-  #         tags: retrospected/backend:alpha
-  #         platforms: linux/amd64
-  #         push: true
+      - name: Build and push Backend
+        uses: docker/build-push-action@v4
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          file: backend/Dockerfile
+          context: backend
+          tags: retrospected/backend:alpha
+          platforms: linux/amd64
+          push: true
 
   integration:
     runs-on: ubuntu-latest
-    # needs: [frontend, backend]
+    needs: [frontend, backend]
 
     steps:
       - uses: actions/checkout@v3
@@ -97,32 +97,32 @@ jobs:
         with:
           name: Test videos
           if: always()
-          path: integration/e2e/cypress/videos
+          path: e2e/cypress/videos
           retention-days: 14
-          if-no-files-found: ignore # 'warn' or 'ignore' are also available, defaults to `warn`
+          # if-no-files-found: ignore # 'warn' or 'ignore' are also available, defaults to `warn`
 
-  # trivy:
-  #   runs-on: ubuntu-latest
-  #   needs: [frontend, backend]
+  trivy:
+    runs-on: ubuntu-latest
+    needs: [frontend, backend]
 
-  #   steps:
-  #     - name: Trivy - Frontend
-  #       uses: aquasecurity/trivy-action@master
-  #       with:
-  #         image-ref: retrospected/frontend:alpha
-  #         format: 'table'
-  #         exit-code: '1'
-  #         ignore-unfixed: true
-  #         vuln-type: 'os,library'
-  #         severity: 'CRITICAL'
+    steps:
+      - name: Trivy - Frontend
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: retrospected/frontend:alpha
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
 
-  #     - name: Trivy - Backend
-  #       uses: aquasecurity/trivy-action@master
-  #       with:
-  #         image-ref: retrospected/backend:alpha
-  #         format: 'table'
-  #         exit-code: '1'
-  #         ignore-unfixed: true
-  #         vuln-type: 'os,library'
-  #         severity: 'CRITICAL'
+      - name: Trivy - Backend
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: retrospected/backend:alpha
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
       
