--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   "homepage": "https://www.retrospected.com",
   "dependencies": {
     "del-cli": "5.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.3"
   }
 }
