--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -144,7 +144,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Integration Tests
-        run: docker-compose -f ./integration/docker-compose.ci.alpha.yml up --exit-code-from cypress
+        run: docker compose -f ./integration/docker-compose.ci.alpha.yml up --exit-code-from cypress
       - uses: actions/upload-artifact@v3
         if: always()
         with:
