--- a/marketing/package.json
+++ b/marketing/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -31,8 +32,6 @@
     "@use-it/event-listener": "^0.1.7",
     "animate.css": "^4.1.1",
     "date-fns": "^2.30.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "i18next": "^23.2.11",
