--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
   },
   "homepage": "https://www.retrospected.com",
   "dependencies": {
-    "del-cli": "5.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.3"
+    "del-cli": "6.0.0",
+    "@biomejs/biome": "1.9.4"
   }
 }
