--- a/marketing/package.json
+++ b/marketing/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ci-lint": "biome ci"
   },
   "dependencies": {
     "@biomejs/biome": "1.9.4",
