--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -137,7 +137,7 @@ jobs:
     needs: [frontend, backend, marketing]
     steps:
       - name: Trivy - Frontend
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: retrospected/frontend:alpha
           format: "table"
@@ -146,7 +146,7 @@ jobs:
           vuln-type: "os,library"
           severity: "CRITICAL"
       - name: Trivy - Backend
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: retrospected/backend:alpha
           format: "table"
@@ -155,7 +155,7 @@ jobs:
           vuln-type: "os,library"
           severity: "CRITICAL"
       - name: Trivy - Marketing
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: retrospected/marketing:alpha
           format: "table"
